--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -20,6 +20,8 @@ jobs:
     runs-on: ubuntu-latest
     needs: compile
     steps:
+      - name: checkout
+        uses: actions/checkout@v2 
       - name: deploy to surge rickymortilink.surge.sh
         uses: dswistowski/surge-sh-action@v1
         with:
