--- a/.github/workflows/deploy.yml
+++ b/.github/workflows/deploy.yml
@@ -21,6 +21,6 @@ jobs:
         uses: dswistowski/surge-sh-action@v1
         with:
           domain: 'rickymortylink.surge.sh'
-          project: './out'
+          project: 'out'
           login: ${{ secrets.surge_login }}
           token: ${{ secrets.surge_token }}
